// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Numeric Integer Input Mask toggle has an inputMaskFormat 1`] = `
<div>
  <div
    aria-labelledby="numericField_fieldDetails"
    class="form-group hide"
    data-field-name="numericField"
    tabindex="0"
  >
    <input
      class="form-control ddm-form-field-type__numeric--rtl"
      name="numericField_masked"
      placeholder="+__ (__) ____-____"
      type="text"
      value="+12 (34) 5678-9012"
    />
    <input
      name="numericField"
      type="hidden"
      value="123456789012"
    />
    <input
      name="numericField_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;

exports[`Field Numeric renders the default markup 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <input
      class="form-control ddm-form-field-type__numeric--rtl"
      name="undefined"
      type="text"
      value=""
    />
    <input
      name="undefined_edited"
      type="hidden"
      value="false"
    />
    
  </div>
</div>
`;
